# Agent-build

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md
project_factory/: __init__.py  builder.py  committer.py  config.py  ollama_client.py
project_factory/templates/fastapi_basic/: README.md.j2  pyproject.toml.j2
project_factory/templates/fastapi_basic/tests/: test_smoke.py.j2
projects/: .gitkeep
tools/project_factory/: pyproject.toml
tools/project_factory/project_factory/: cli.py  planner.py  safety.py  verifier.py
tools/project_factory/project_factory/templates/fastapi_basic/: README.md.j2  template.json
tools/project_factory/project_factory/templates/fastapi_basic/app/: main.py.j2
tools/project_factory/project_factory/templates/fastapi_basic/app/routers/: health.py.j2
